--- a/multihop.ipynb
+++ b/multihop.ipynb
@@ -1496,19 +1496,367 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Metric: 52.00 / 78 (66.7%):  26%|██▌       | 78/300 [02:16<03:15,  1.14it/s]"
+      "Average Metric: 201.67 / 300 (67.2%): 100%|██████████| 300/300 [08:34<00:00,  1.71s/it]"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 21:51:32 INFO dspy.evaluate.evaluate: Average Metric: 201.66666666666657 / 300 (67.2%)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>claim</th>\n",
+       "      <th>example_titles</th>\n",
+       "      <th>notes</th>\n",
+       "      <th>pred_titles</th>\n",
+       "      <th>top5_recall</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Nike football team has had a player endorse the football boot Nike...</td>\n",
+       "      <td>[Nike Total 90, Marcus Rashford, Nike Hypervenom]</td>\n",
+       "      <td>['Nike Total 90 was replaced by Nike Hypervenom.', 'Nike Hyperveno...</td>\n",
+       "      <td>[Robert Lewandowski, Kylian Mbappé, Nike Total 90, Marcus Rashford...</td>\n",
+       "      <td>✔️ [1.000]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bill Boyd is the chairman of the appliance company that operates t...</td>\n",
+       "      <td>[Suncoast Hotel and Casino, Thomas Eje, Boyd Gaming]</td>\n",
+       "      <td>['Bill Boyd is the executive chairman of Boyd Gaming Corporation.'...</td>\n",
+       "      <td>[Boyd Gaming Corporation, Thomas Eje, Suncoast Hotel and Casino, B...</td>\n",
+       "      <td>✔️ [0.667]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The president of South Korea was born 24 January 1953. The group t...</td>\n",
+       "      <td>[Moon Jae-in, Euh Yoon-dae, Presidential Council on Nation Brandin...</td>\n",
+       "      <td>['The president of South Korea was born on January 24, 1953.', 'Eu...</td>\n",
+       "      <td>[Euh Yoon-Dae, President of South Korea, Moon Jae-in, KB Financial...</td>\n",
+       "      <td>✔️ [0.667]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>The movie Khan Kluay was released 2 months before the 2009 movie t...</td>\n",
+       "      <td>[Fantastic Mr. Fox (film), Khan Kluay, Jason Schwartzman]</td>\n",
+       "      <td>['Khan Kluay was released in 2006.', 'Jason Schwartzman collaborat...</td>\n",
+       "      <td>[Fantastic Mr. Fox, Khan Kluay, Jason Schwartzman]</td>\n",
+       "      <td>✔️ [0.667]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The director of Finding Dory co-directed the film A Bug's Life.</td>\n",
+       "      <td>[Andrew Stanton, Finding Dory, A Bug's Life]</td>\n",
+       "      <td>['Andrew Stanton directed Finding Dory.', \"Andrew Stanton co-direc...</td>\n",
+       "      <td>[Andrew Stanton, Lee Unkrich, Finding Dory, A Bug's Life]</td>\n",
+       "      <td>✔️ [1.000]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                   claim  \\\n",
+       "0  Nike football team has had a player endorse the football boot Nike...   \n",
+       "1  Bill Boyd is the chairman of the appliance company that operates t...   \n",
+       "2  The president of South Korea was born 24 January 1953. The group t...   \n",
+       "3  The movie Khan Kluay was released 2 months before the 2009 movie t...   \n",
+       "4        The director of Finding Dory co-directed the film A Bug's Life.   \n",
+       "\n",
+       "                                                          example_titles  \\\n",
+       "0                      [Nike Total 90, Marcus Rashford, Nike Hypervenom]   \n",
+       "1                   [Suncoast Hotel and Casino, Thomas Eje, Boyd Gaming]   \n",
+       "2  [Moon Jae-in, Euh Yoon-dae, Presidential Council on Nation Brandin...   \n",
+       "3              [Fantastic Mr. Fox (film), Khan Kluay, Jason Schwartzman]   \n",
+       "4                           [Andrew Stanton, Finding Dory, A Bug's Life]   \n",
+       "\n",
+       "                                                                   notes  \\\n",
+       "0  ['Nike Total 90 was replaced by Nike Hypervenom.', 'Nike Hyperveno...   \n",
+       "1  ['Bill Boyd is the executive chairman of Boyd Gaming Corporation.'...   \n",
+       "2  ['The president of South Korea was born on January 24, 1953.', 'Eu...   \n",
+       "3  ['Khan Kluay was released in 2006.', 'Jason Schwartzman collaborat...   \n",
+       "4  ['Andrew Stanton directed Finding Dory.', \"Andrew Stanton co-direc...   \n",
+       "\n",
+       "                                                             pred_titles  \\\n",
+       "0  [Robert Lewandowski, Kylian Mbappé, Nike Total 90, Marcus Rashford...   \n",
+       "1  [Boyd Gaming Corporation, Thomas Eje, Suncoast Hotel and Casino, B...   \n",
+       "2  [Euh Yoon-Dae, President of South Korea, Moon Jae-in, KB Financial...   \n",
+       "3                     [Fantastic Mr. Fox, Khan Kluay, Jason Schwartzman]   \n",
+       "4              [Andrew Stanton, Lee Unkrich, Finding Dory, A Bug's Life]   \n",
+       "\n",
+       "  top5_recall  \n",
+       "0  ✔️ [1.000]  \n",
+       "1  ✔️ [0.667]  \n",
+       "2  ✔️ [0.667]  \n",
+       "3  ✔️ [0.667]  \n",
+       "4  ✔️ [1.000]  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                <div style='\n",
+       "                    text-align: center;\n",
+       "                    font-size: 16px;\n",
+       "                    font-weight: bold;\n",
+       "                    color: #555;\n",
+       "                    margin: 10px 0;'>\n",
+       "                    ... 295 more rows not displayed ...\n",
+       "                </div>\n",
+       "                "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "67.22"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div>\n",
+       "  <style scoped>\n",
+       "  button {\n",
+       "    border: none;\n",
+       "    border-radius: 4px;\n",
+       "    background-color: rgb(34, 114, 180);\n",
+       "    font-family: -apple-system, \"system-ui\", \"Segoe UI\", Roboto, \"Helvetica Neue\", Arial;\n",
+       "    font-size: 13px;\n",
+       "    color: white;\n",
+       "    margin-top: 8px;\n",
+       "    margin-bottom: 8px;\n",
+       "    padding: 8px 16px;\n",
+       "    cursor: pointer;\n",
+       "  }\n",
+       "  button:hover {\n",
+       "    background-color: rgb(66, 153, 224);\n",
+       "  }\n",
+       "  </style>\n",
+       "  <button\n",
+       "    onclick=\"\n",
+       "        const display = this.nextElementSibling.style.display;\n",
+       "        const isCollapsed = display === 'none';\n",
+       "        this.nextElementSibling.style.display = isCollapsed ? null : 'none';\n",
+       "\n",
+       "        const verb = isCollapsed ? 'Collapse' : 'Expand';\n",
+       "        this.innerText = `${verb} MLflow Trace`;\n",
+       "    \"\n",
+       "  >Collapse MLflow Trace</button>\n",
+       "  <iframe\n",
+       "    id=\"trace-renderer\"\n",
+       "    style=\"width: 100%; height: 500px; border: none; resize: vertical;\"\n",
+       "    src=\"http://localhost:5000/static-files/lib/notebook-trace-renderer/index.html?trace_id=7bbdc38de8c444cc88513cf28ad79e47&amp;experiment_id=374362034103955121&amp;trace_id=8129bcf4d3e146e3bb001dc6f855b901&amp;experiment_id=374362034103955121&amp;trace_id=aba3e7e6bc5a44cca70afd305d4f811e&amp;experiment_id=374362034103955121&amp;trace_id=e82e31eb46fa4c5f9eb30afa4cca24ee&amp;experiment_id=374362034103955121&amp;trace_id=844bc9b9844e47099da750af79dd8b7c&amp;experiment_id=374362034103955121&amp;trace_id=e4d9a179e74f4a14abf6899574a96453&amp;experiment_id=374362034103955121&amp;trace_id=555b36a23d874e70beb76f3ee1473d98&amp;experiment_id=374362034103955121&amp;trace_id=0f219fc1b9d8419f9213dd07201ce179&amp;experiment_id=374362034103955121&amp;trace_id=b75defb0113e43e49307943a1c9e0a19&amp;experiment_id=374362034103955121&amp;trace_id=57b5a3ce5b824b2f8ce48f0535d971e4&amp;experiment_id=374362034103955121&amp;version=2.20.3\"\n",
+       "  />\n",
+       "</div>\n"
+      ],
+      "text/plain": [
+       "[Trace(request_id=7bbdc38de8c444cc88513cf28ad79e47), Trace(request_id=8129bcf4d3e146e3bb001dc6f855b901), Trace(request_id=aba3e7e6bc5a44cca70afd305d4f811e), Trace(request_id=e82e31eb46fa4c5f9eb30afa4cca24ee), Trace(request_id=844bc9b9844e47099da750af79dd8b7c), Trace(request_id=e4d9a179e74f4a14abf6899574a96453), Trace(request_id=555b36a23d874e70beb76f3ee1473d98), Trace(request_id=0f219fc1b9d8419f9213dd07201ce179), Trace(request_id=b75defb0113e43e49307943a1c9e0a19), Trace(request_id=57b5a3ce5b824b2f8ce48f0535d971e4)]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "evaluate(optimized)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Tabataba suivi de pawana',\n",
+       " 'Up Against It!',\n",
+       " 'The Alien',\n",
+       " 'The Illusionist',\n",
+       " 'Bernard-Marie Koltès',\n",
+       " 'In the Solitude of Cotton Fields',\n",
+       " 'Faultless disagreement',\n",
+       " 'Up Against It',\n",
+       " 'The Hook',\n",
+       " \"The Kilroys' List\"]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div>\n",
+       "  <style scoped>\n",
+       "  button {\n",
+       "    border: none;\n",
+       "    border-radius: 4px;\n",
+       "    background-color: rgb(34, 114, 180);\n",
+       "    font-family: -apple-system, \"system-ui\", \"Segoe UI\", Roboto, \"Helvetica Neue\", Arial;\n",
+       "    font-size: 13px;\n",
+       "    color: white;\n",
+       "    margin-top: 8px;\n",
+       "    margin-bottom: 8px;\n",
+       "    padding: 8px 16px;\n",
+       "    cursor: pointer;\n",
+       "  }\n",
+       "  button:hover {\n",
+       "    background-color: rgb(66, 153, 224);\n",
+       "  }\n",
+       "  </style>\n",
+       "  <button\n",
+       "    onclick=\"\n",
+       "        const display = this.nextElementSibling.style.display;\n",
+       "        const isCollapsed = display === 'none';\n",
+       "        this.nextElementSibling.style.display = isCollapsed ? null : 'none';\n",
+       "\n",
+       "        const verb = isCollapsed ? 'Collapse' : 'Expand';\n",
+       "        this.innerText = `${verb} MLflow Trace`;\n",
+       "    \"\n",
+       "  >Collapse MLflow Trace</button>\n",
+       "  <iframe\n",
+       "    id=\"trace-renderer\"\n",
+       "    style=\"width: 100%; height: 500px; border: none; resize: vertical;\"\n",
+       "    src=\"http://localhost:5000/static-files/lib/notebook-trace-renderer/index.html?trace_id=754456d5e931401eb0a60c4d1b3b46ca&amp;experiment_id=374362034103955121&amp;version=2.20.3\"\n",
+       "  />\n",
+       "</div>\n"
+      ],
+      "text/plain": [
+       "Trace(request_id=754456d5e931401eb0a60c4d1b3b46ca)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Hop()(claim=\"The author of the 1960s unproduced script written for The Beatles, Up Against It, and Bernard-Marie Koltès are both playwrights.\").titles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Joe Orton',\n",
+       " 'Bernard-Marie Koltès',\n",
+       " 'What the Butler Saw (play)',\n",
+       " 'Up Against It']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div>\n",
+       "  <style scoped>\n",
+       "  button {\n",
+       "    border: none;\n",
+       "    border-radius: 4px;\n",
+       "    background-color: rgb(34, 114, 180);\n",
+       "    font-family: -apple-system, \"system-ui\", \"Segoe UI\", Roboto, \"Helvetica Neue\", Arial;\n",
+       "    font-size: 13px;\n",
+       "    color: white;\n",
+       "    margin-top: 8px;\n",
+       "    margin-bottom: 8px;\n",
+       "    padding: 8px 16px;\n",
+       "    cursor: pointer;\n",
+       "  }\n",
+       "  button:hover {\n",
+       "    background-color: rgb(66, 153, 224);\n",
+       "  }\n",
+       "  </style>\n",
+       "  <button\n",
+       "    onclick=\"\n",
+       "        const display = this.nextElementSibling.style.display;\n",
+       "        const isCollapsed = display === 'none';\n",
+       "        this.nextElementSibling.style.display = isCollapsed ? null : 'none';\n",
+       "\n",
+       "        const verb = isCollapsed ? 'Collapse' : 'Expand';\n",
+       "        this.innerText = `${verb} MLflow Trace`;\n",
+       "    \"\n",
+       "  >Collapse MLflow Trace</button>\n",
+       "  <iframe\n",
+       "    id=\"trace-renderer\"\n",
+       "    style=\"width: 100%; height: 500px; border: none; resize: vertical;\"\n",
+       "    src=\"http://localhost:5000/static-files/lib/notebook-trace-renderer/index.html?trace_id=9d0cf60b8ab447d9908223552a7aea83&amp;experiment_id=374362034103955121&amp;version=2.20.3\"\n",
+       "  />\n",
+       "</div>\n"
+      ],
+      "text/plain": [
+       "Trace(request_id=9d0cf60b8ab447d9908223552a7aea83)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "optimized(claim=\"The author of the 1960s unproduced script written for The Beatles, Up Against It, and Bernard-Marie Koltès are both playwrights.\").titles"
    ]
   },
   {
