--- a/multihop.ipynb
+++ b/multihop.ipynb
@@ -1864,7 +1864,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dspy.inspect_history(n=1)"
+   ]
   }
  ],
  "metadata": {
